k8s-deploy/rbac.yml
#  Namespace: Logical isolation for the entire application stack
apiVersion: v1
kind: Namespace
metadata:
  name: two-tier-app
---
